# moodle-gift-gen

./: .gitattributes  CMakeLists.txt  LICENSE  ai-quiz-gen.cpp  moodle-gift-gen.cpp  readme.md
gift-validator/: gift-validator-example.cpp  gift-validator.cpp  gift-validator.hpp
gift-validator/invalid/: bad.gift  one-question-parsed-as-two.gift
gift-validator/valid/: one-question-parsed-as-one.gift  readme.md
